@@ -7,6 +7,17 @@ Noteworthy changes in version 2.0.0 (unreleased)
    as include directory. All headers have to be included with the prefix
    gpgme++/ now.
 
+ * Removed the TrustItem listing functionality which used GpgME's trustlist
+   feature which worked only for a short period in 2003.  [T4834]
+
+ * Interface changes relative to the 1.24 branch of gpgme:
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+ Context::startTrustItemListing          REMOVED.
+ Context::nextTrustItem                  REMOVED.
+ Context::endTrustItemListing            REMOVED.
+ EventLoopInteractor::nextTrustItemEvent REMOVED.
+ TrustItem                               REMOVED.
+
 
 Noteworthy changes in earlier versions can be found in the NEWS file of
 gpgme.
